# pycode-mcp-server

./: .gitignore  CHANGELOG.md  README.md  SKILL.md  mcp_server.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: __init__.py  agent_eval.py  ast_grep_engine.py  benchmark.py  cache.py  code_analyzer.py  codegen_context.py  default_rules.yml  diagnostics.py  doc_lookup.py  health_check.py  inspect_env.py  jedi_engine.py  project_analyzer.py  ripgrep_engine.py  token_estimator.py
tests/: __init__.py  test_ast_grep_engine.py  test_basic.py  test_benchmarks.py  test_diagnostics.py  test_jedi_engine.py  test_mcp_server.py  test_project_analyzer.py  test_ripgrep_engine.py
tests/eval_tasks/: README.md  __init__.py  task_01_doc_lookup.py  task_02_error_handling.py  task_03_class_usage.py  task_04_file_analysis.py  task_05_project_deps.py  task_06_refactor.py  task_07_debug_fix.py  task_08_test_generation.py  task_09_api_integration.py  task_10_cross_module.py
