[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycode-mcp-server"
dynamic = ["version"]
description = "MCP server providing Python code intelligence — documentation lookup, environment introspection, code analysis, and diagnostics for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "spkc83 & Opencode" }
]
dependencies = [
    "jedi>=0.19.0",
    "mcp[cli]>=1.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
pycode-mcp-server = "mcp_server:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff"]
enhanced = ["pyflakes", "ast-grep-py"]
benchmark = ["tiktoken"]

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
include = ["mcp_server.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
